# SpiritRender

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  broken_makefile  cmake_build.sh  compile_commands.json  debug.sh  gencmake.sh  makefile  overview.odg  runmake.sh  test.sh
Config/: shaders_list.txt
Config/shaders/: simple_shader.frag  simple_shader.vert
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/liblist/: CMakeLists.txt  linked_list.c  linked_list.h
src/: spirit_header.h  spirit_public.h  testmain.c
src/core/: spirit_command_buffer.c  spirit_command_buffer.h  spirit_context.c  spirit_context.h  spirit_device.c  spirit_device.h  spirit_ecs.c  spirit_ecs.h  spirit_fence.c  spirit_fence.h  spirit_image.c  spirit_image.h  spirit_material.c  spirit_material.h  spirit_memory.h  spirit_mesh.c  spirit_mesh.h  spirit_pipeline.c  spirit_pipeline.h  spirit_renderpass.c  spirit_renderpass.h  spirit_swapchain.c  spirit_swapchain.h  spirit_sync.c  spirit_sync.h  spirit_types.h  spirit_window.c  spirit_window.h
src/core/components/: spirit_mesh_render_component.h  spirit_transform_component.h
src/debug/: debug_malloc.c  debug_malloc.h  function_timer.c  function_timer.h  messenger.c  messenger.h
src/glsl-loader/: glsl_loader.c  glsl_loader.h
src/mem/: spirit_mem.c  spirit_mem.h  spirit_memMap.c  spirit_memMap.h  spirit_memTree.c  spirit_memTree.h  spirit_tree.c  spirit_tree.h
src/render/: spirit_context.c  spirit_context.h  spirit_device.c  spirit_device.h  spirit_fence.c  spirit_fence.h  spirit_image.c  spirit_image.h  spirit_mesh.h  spirit_pipeline.c  spirit_pipeline.h  spirit_renderpass.c  spirit_renderpass.h  spirit_swapchain.c  spirit_swapchain.h  spirit_types.h  spirit_window.h
src/utils/: map.c  map.h  nanoprinf.c  nanoprintf.h  platform.h  spirit_file.c  spirit_file.h  spirit_string.c  spirit_string.h  spirit_vector.h
src/utils/platform/: platform_queue_bundle.h  platform_unix.c  platform_unix.h  platform_win32.c  platform_win32.h
